--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "prod": "node src/server.js"
+    "prod": "knex migrate:latest && knex seed:run && node src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
